# Gambit

./: .gitignore  Anchor.toml  README.md  app.json  package-lock.json  package.json
.qwen/: settings.json  settings.json.orig
app/: _layout.tsx  game.tsx  index.tsx
app/create/: index.tsx
components/: app-providers.tsx
components/gambit/: index.ts  participant-list.tsx  qr-scanner.tsx  roulette.tsx  state-badge.tsx
constants/: app-styles.ts
features/gambit/: gambit-context.tsx
gambit_program/: Cargo.toml
gambit_program/src/: lib.rs
gambit_program/tests/: initialize.rs
programs/gambit_program/: Cargo.toml
programs/gambit_program/src/: constants.rs  error.rs  lib.rs  vrf.rs
programs/gambit_program/src/instructions/: cancel_session.rs  confirm_bill.rs  consume_randomness.rs  deposit_share.rs  initialize_session.rs  join_session.rs  lock_session.rs  mod.rs  request_reveal.rs  settle.rs
programs/gambit_program/src/state/: mod.rs  participant.rs  session.rs
tests/: gambit_program.ts
types/: gambit.ts
