[package]
name = "gambit_program"
version = "0.1.0"
description = "SplitRoulette - social bill splitting on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gambit_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor"] }
ephemeral-vrf-sdk = { version = "0.2.1", features = ["anchor"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }