[package]
name = "gambit_program"
version = "0.1.0"
description = "SplitRoulette - social bill splitting on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gambit_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
borsh = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }